--- a/public/Group_2_Timod.html
+++ b/public/Group_2_Timod.html
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © Vincent 2024</p>
+        <p>Copyright © Ysl Ron 2024</p>
       </footer>
     </div>
   </body>
