--- a/public/yslron_sample.html
+++ b/public/yslron_sample.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is group_4_Floridaa</p>
+        <p>My Name is group_4_Florida</p>
       </header>
       <main>
         <section>
