Shortened name to Bersales
I changed it to just my last name to make it cleaner

--- a/public/Group-3-Bersales.html
+++ b/public/Group-3-Bersales.html
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © Joshua Neo Angelo P. Bersales 2024</p>
+        <p>Copyright © Bersales 2024</p>
       </footer>
     </div>
   </body>
