--- a/public/Group-3_Tenajura.html
+++ b/public/Group-3_Tenajura.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Ron</p>
+        <p>My Name is Jerwin Tenajura</p>
       </header>
       <main>
         <section>
