--- a/public/yslron_sample.html
+++ b/public/yslron_sample.html
@@ -25,6 +25,7 @@
       <header>
         <h1>Welcome to My Beautiful Page</h1>
         <p>Florida</p>
+        <p>Lapaz, Rey Mark G.</p>
       </header>
       <main>
         <section>
