--- a/public/yslron_sample.html
+++ b/public/yslron_sample.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>Florida</p>
+        <p>Florida, MJ L.</p>
         <p>Lapaz, Rey Mark G.</p>
       </header>
       <main>
