--- a/public/Group_2_Bayo.html
+++ b/public/Group_2_Bayo.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Reymund Bayo</p>
+        <p>My Name is Bayo</p>
       </header>
       <main>
         <section>
