--- a/public/yslron_sample.html
+++ b/public/yslron_sample.html
@@ -26,6 +26,7 @@
         <h1>Welcome to My Beautiful Page</h1>
         <p>Florida, MJ L.</p>
         <p>Lapaz, Rey Mark G.</p>
+        <p>Jalou M. Mutia</p>
       </header>
       <main>
         <section>
