--- a/public/yslron_sample.html
+++ b/public/yslron_sample.html
@@ -27,6 +27,7 @@
         <p>Florida, MJ L.</p>
         <p>Lapaz, Rey Mark G.</p>
         <p>Dennis. Jerry O.</p>
+        <p>Mutia, Jalou M.</p>
       </header>
       <main>
         <section>
