--- a/public/group_2_juanich.html
+++ b/public/group_2_juanich.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Juanich</p>
+        <p>My Name is Jhoanna Marie Juanich</p>
       </header>
       <main>
         <section>
