--- a/public/Group_5_BASUH.html
+++ b/public/Group_5_BASUH.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to Our Page</h1>
-        <p>My Name is khen</p>
+        <p>My Name is khen basuhh</p>
       </header>
       <main>
         <section>
