--- a/public/group-0-daligdig.html
+++ b/public/group-0-daligdig.html
@@ -33,10 +33,7 @@
       <main>
         <section>
           <h2>About This Page</h2>
-          <p>
-            This page is a simple HTML and CSS example designed to show a clean
-            and attractive layout.
-          </p>
+          <p>This page is a sds.</p>
         </section>
         <section>
           <h2>Features</h2>
