--- a/public/Group-3-Bersales.html
+++ b/public/Group-3-Bersales.html
@@ -37,7 +37,7 @@
         <section>
           <h2>Features</h2>
           <ul>
-            <li>Test Description 1</li>
+            <li>BLIS</li>
             <li>Test Description 2</li>
             <li>Test Description 3</li>
           </ul>
