I add a tag and my name

--- a/public/eso_sample .html
+++ b/public/eso_sample .html
@@ -25,6 +25,7 @@
       <header>
         <h1>Welcome to My Beautiful Page</h1>
         <p>My Name is Ell Me</p>
+        <p>My Name is Leah Mae</p>
       </header>
       <main>
         <section>
