--- a/public/group_5_cobar.html
+++ b/public/group_5_cobar.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Kimuel</p>
+        <p>My Name is cobar</p>
       </header>
       <main>
         <section>
