--- a/public/group_3_zipayaogwapo.html
+++ b/public/group_3_zipayaogwapo.html
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © Che 2024</p>
+        <p>Copyright © zips 2024</p>
       </footer>
     </div>
   </body>
