--- a/public/group_3_agtina.html
+++ b/public/group_3_agtina.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Shermarie</p>
+        <p>My Name is Shermarie Y. Agtina</p>
       </header>
       <main>
         <section>
