--- a/public/group_5_basuh.html
+++ b/public/group_5_basuh.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is irish</p>
+        <p>My Name is basuhhhh</p>
       </header>
       <main>
         <section>
