--- a/public/group_3_agtina.html
+++ b/public/group_3_agtina.html
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © Sherm 2024</p>
+        <p>Copyright © Shermarie 2024</p>
       </footer>
     </div>
   </body>
