--- a/public/group_OJT_COBAR.html
+++ b/public/group_OJT_COBAR.html
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © COBAR 2024</p>
+        <p>Copyright © COBAR SAMP[LE] 2024</p>
       </footer>
     </div>
   </body>
