--- a/public/Group_5_Lagoy.html
+++ b/public/Group_5_Lagoy.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is irish</p>
+        <p>My Name is Canoy</p>
       </header>
       <main>
         <section>
