--- a/public/group_OJT_COBAR.html
+++ b/public/group_OJT_COBAR.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is COBAR</p>
+        <p>My Name is COBAR MODIFIED</p>
       </header>
       <main>
         <section>
@@ -44,7 +44,7 @@
         </section>
       </main>
       <footer>
-        <p>Copyright © COBAR SAMP[LE] 2024</p>
+        <p>Copyright © COBAR MODIFIED 2024</p>
       </footer>
     </div>
   </body>
