--- a/public/Group_5_Basuh.html
+++ b/public/Group_5_Basuh.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Kimuel</p>
+        <p>My Name is Khen</p>
       </header>
       <main>
         <section>
