--- a/public/group_5_ligan.html
+++ b/public/group_5_ligan.html
@@ -24,7 +24,7 @@
       </header>
       <header>
         <h1>Welcome to My Beautiful Page</h1>
-        <p>My Name is Christine</p>
+        <p>My Name is Ligan</p>
       </header>
       <main>
         <section>
