--- a/public/group_OJT_COBAR.html
+++ b/public/group_OJT_COBAR.html
@@ -37,9 +37,9 @@
         <section>
           <h2>Features</h2>
           <ul>
-            <li>Test Description 1</li>
-            <li>Test Description 2</li>
-            <li>Test Description 3</li>
+            <li>Clutch</li>
+            <li>Clutch</li>
+            <li>Clutch</li>
           </ul>
         </section>
       </main>
